--- a/heatmap.html
+++ b/heatmap.html
@@ -7,18 +7,17 @@
     <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
     <title>热力图功能示例</title>
     <style type="text/css">
-		ul,li{list-style: none;margin:0;padding:0;float:left;}
-		html{height:100%}
-		body{height:100%;margin:0px;padding:0px;font-family:"微软雅黑";}
-		#map{height:500px;width:100%;}
-		#r-result{width:100%;}
-    </style>	
+        ul,li{list-style: none;margin:0;padding:0;float:left;}
+        html{height:100%}
+        body{height:100%;margin:0px;padding:0px;font-family:"微软雅黑";}
+        #map{height:500px;width:100%;}
+        #r-result{width:100%;}
+    </style>    
 </head>
 <body>
-	<div id="map"></div>
-	<div id="r-result">
-		<input type="button"  onclick="openHeatmap();" value="显示热力图"/><input type="button"  onclick="closeHeatmap();" value="关闭热力图"/>
-	</div>
+    <div id="map"></div>
+    <div id="log"></div>
+    
 </body>
 </html>
 <script type="text/javascript" src="js/heat.js"></script>   
